TDM-153 edit event client